cmake_minimum_required(VERSION 3.5)
project(quickjs_host)
set(QUICKJS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
include(${QUICKJS_SOURCE_DIR}/cmake/quickjs.cmake)
# Install the target
include(GNUInstallDirs)
install(TARGETS unicode_gen
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT unicode_gen
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT unicode_gen
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT unicode_gen
)

install(TARGETS qjsc
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT qjsc
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT qjsc
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT qjsc
)

install(TARGETS run-test262
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT run-test262
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT run-test262
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT run-test262
)

install(TARGETS regexp_test
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT regexp_test
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT regexp_test
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT regexp_test
)
